--- a/src/CheckoutKata/CheckoutKata.csproj
+++ b/src/CheckoutKata/CheckoutKata.csproj
@@ -128,6 +128,7 @@
     </Compile>
     <Compile Include="Models\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\ProductRepository.cs" />
     <Compile Include="Services\ProductService.cs" />
     <Compile Include="ViewModels\ProductViewModel.cs" />
   </ItemGroup>
